// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertShapeToQueryParameters converts a shape renderer into a query parameter 1`] = `
Object {
  "author": Object {
    "changes": null,
    "contributions": Object {},
    "fieldId": "field_hnI7P1UdbB",
    "isRemoved": false,
    "name": "author",
    "required": true,
    "shapeChoices": Array [
      Object {
        "jsonType": "String",
        "shapeId": "shape_qQT0krhOKn",
      },
    ],
    "shapeId": "shape_qQT0krhOKn",
  },
  "status": Object {
    "changes": "added",
    "contributions": Object {},
    "fieldId": "field_W8dnCvOHU",
    "name": "status",
    "required": true,
    "shapeChoices": Array [
      Object {
        "jsonType": "String",
        "shapeId": "shape_ZL8uOU2HQF",
      },
    ],
    "shapeId": "shape_ZL8uOU2HQF",
  },
}
`;

exports[`createFlatList converts shape to a contribution list 1`] = `
Array [
  Object {
    "contribution": Object {
      "contributionKey": "description",
      "endpointId": "path_UOIsxzICu5.GET",
      "id": "field_LRYtHDYkVO",
      "value": "",
    },
    "depth": 1,
    "name": "task",
    "shapes": Array [
      Object {
        "jsonType": "String",
        "shapeId": "shape_tUQxsgursF",
      },
    ],
  },
  Object {
    "contribution": Object {
      "contributionKey": "description",
      "endpointId": "path_UOIsxzICu5.GET",
      "id": "field_XM7KRqWOlV",
      "value": "",
    },
    "depth": 1,
    "name": "isDone",
    "shapes": Array [
      Object {
        "jsonType": "Boolean",
        "shapeId": "shape_9cUoBYpjJU",
      },
    ],
  },
  Object {
    "contribution": Object {
      "contributionKey": "description",
      "endpointId": "path_UOIsxzICu5.GET",
      "id": "field_9mczOWgNnu",
      "value": "",
    },
    "depth": 1,
    "name": "id",
    "shapes": Array [
      Object {
        "jsonType": "String",
        "shapeId": "shape_R4cTQ1zpOs",
      },
    ],
  },
]
`;

exports[`getShapeRenderer converts shapes to shape renderers 1`] = `
Array [
  Object {
    "asArray": Object {
      "shapeChoices": Array [
        Object {
          "asObject": Object {
            "fields": Array [
              Object {
                "changes": null,
                "contributions": Object {},
                "fieldId": "field_LRYtHDYkVO",
                "isRemoved": false,
                "name": "task",
                "required": true,
                "shapeChoices": Array [
                  Object {
                    "jsonType": "String",
                    "shapeId": "shape_tUQxsgursF",
                  },
                ],
                "shapeId": "shape_tUQxsgursF",
              },
              Object {
                "changes": null,
                "contributions": Object {},
                "fieldId": "field_XM7KRqWOlV",
                "isRemoved": false,
                "name": "isDone",
                "required": true,
                "shapeChoices": Array [
                  Object {
                    "jsonType": "Boolean",
                    "shapeId": "shape_9cUoBYpjJU",
                  },
                ],
                "shapeId": "shape_9cUoBYpjJU",
              },
              Object {
                "changes": "updated",
                "contributions": Object {},
                "fieldId": "field_9mczOWgNnu",
                "isRemoved": false,
                "name": "id",
                "required": true,
                "shapeChoices": Array [
                  Object {
                    "jsonType": "String",
                    "shapeId": "shape_R4cTQ1zpOs",
                  },
                ],
                "shapeId": "shape_R4cTQ1zpOs",
              },
            ],
          },
          "jsonType": "Object",
          "shapeId": "shape_f7gQgQ8p7G",
        },
      ],
      "shapeId": "shape_f7gQgQ8p7G",
    },
    "jsonType": "Array",
    "shapeId": "shape_cEkQAVQ3ib",
  },
]
`;

exports[`getShapeRenderer converts shapes to shape renderers with changelog 1`] = `
Array [
  Object {
    "asArray": Object {
      "shapeChoices": Array [
        Object {
          "asObject": Object {
            "fields": Array [
              Object {
                "changes": null,
                "contributions": Object {},
                "fieldId": "field_LRYtHDYkVO",
                "isRemoved": false,
                "name": "task",
                "required": true,
                "shapeChoices": Array [
                  Object {
                    "jsonType": "String",
                    "shapeId": "shape_tUQxsgursF",
                  },
                ],
                "shapeId": "shape_tUQxsgursF",
              },
              Object {
                "changes": null,
                "contributions": Object {},
                "fieldId": "field_XM7KRqWOlV",
                "isRemoved": false,
                "name": "isDone",
                "required": true,
                "shapeChoices": Array [
                  Object {
                    "jsonType": "Boolean",
                    "shapeId": "shape_9cUoBYpjJU",
                  },
                ],
                "shapeId": "shape_9cUoBYpjJU",
              },
              Object {
                "changes": "updated",
                "contributions": Object {},
                "fieldId": "field_9mczOWgNnu",
                "isRemoved": false,
                "name": "id",
                "required": true,
                "shapeChoices": Array [
                  Object {
                    "jsonType": "String",
                    "shapeId": "shape_R4cTQ1zpOs",
                  },
                ],
                "shapeId": "shape_R4cTQ1zpOs",
              },
              Object {
                "changes": "removed",
                "contributions": Object {},
                "fieldId": "field_5GCvc8KB2p",
                "isRemoved": true,
                "name": "dueDate",
                "required": true,
                "shapeChoices": Array [
                  Object {
                    "jsonType": "String",
                    "shapeId": "shape_owJFnZQJeS",
                  },
                ],
                "shapeId": "shape_owJFnZQJeS",
              },
            ],
          },
          "jsonType": "Object",
          "shapeId": "shape_f7gQgQ8p7G",
        },
      ],
      "shapeId": "shape_f7gQgQ8p7G",
    },
    "jsonType": "Array",
    "shapeId": "shape_cEkQAVQ3ib",
  },
]
`;
